<resources>
    <string name="app_name">Revix</string>
    <string name="revup">"Rev up with</string>
    <string name="revix">REVIX</string>
    <string name="thefix">the fix for</string>
    <string name="ride">your ride"</string>
    <string name="topic1">Oil Recommendation </string>
    <string name="onboard1detail">Revix helps users find the perfect engine oil for their vehicles by analyzing car models, engine types, and driving conditions with expert recommendations.</string>
    <string name="nxtbtn">Next</string>
    <string name="skip">Skip</string>
    <string name="topic2">Spare parts</string>
    <string name="onboard2details">Revix offers a wide range of genuine spare parts for all vehicle types, ensuring quality, compatibility, and reliability.</string>
    <string name="nxtbtn2">Next</string>
    <string name="skip2">Skip</string>
    <string name="topic3">Mechanic services</string>
    <string name="onboard3details">Revix connects you with trusted mechanics for hassle-free car maintenance and repairs</string>
    <string name="nxtbtn3">Next</string>
    <string name="skip3">Skip</string>
    <string name="title_text">Revolutionizing</string>
    <string name="subtitle_text">Your Vehicle</string>
    <string name="sub_header">Parts Journey</string>
    <string name="get_started_button">Get Started</string>

    <string name="skip4">Skip</string>
    <string name="login">Log In</string>
    <string name="textView6">Enter your email and password to securely access your account and manage your Services</string>
    <string name="username">User Name</string>
    <string name="namehint">Enter user name</string>
    <string name="password">Password</string>
    <string name="passwordhint">  Enter your Password</string>
    <string name="loginbtn">Login</string>
    <string name="signupbtn">Sign Up</string>
    <string name="orloginwith">Or Login With</string>
    <string name="createaccount">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="number">Phone Number</string>
    <string name="Cpassword">Password</string>
    <string name="repassword">Re-Enter Password</string>
    <string name="cnamehint">Name</string>
    <string name="emailhint">Email</string>
    <string name="emailhint2">Phone Number</string>
    <string name="numberhint">Enter Your Number</string>
    <string name="Cpasswordhint">Password</string>
    <string name="repasswordhint">Re-Enter Password</string>
    <string name="signupbtn1">Sign Up</string>
    <string name="signintext"> Already have an Account?</string>
    <string name="signintext2"> Sign In here</string>
    <string name="payment">Make the payment</string>
    <string name ="logout">Log Out</string>
    <string name="pay2">Pay Now !</string>
    <string name="check">I Agree the policy</string>
    <string name="totalcost">Total Cost LKR:</string>
    <string name="success">Success !</string>
    <string name="Yourpaymentwassuccessful.">Your payment  was successful.</string>
    <string name="sendmail">A receipt for this purchase has been sent your email.</string>
    <string name="back">Go Back</string>

    <string name="special">Vehicle-Specific Recommendations</string
        >
    <string name="item1">Mobil Super  0W-20 - 3.5L RS.17,990.00</string>
    <string name="item2">Mobil Super 1000 10W-30 - 4L RS.15,990.00 </string>
    <string name="item3">Mobil Super 10W-40 - 4L RS.14,990.00 </string>
    <string name="item4">Mobil Super 5W-30 - 4L RS.12,990.00 </string>
    <string name="item5">Mobil Agri Super 15W-40 - 4L RS.30,220.00 </string>
    <string name="item6">Mobil Delvac 15W-40 - 4L RS.25,990.00 </string>
    <string name="buy">Buy Now</string>
    <string name="buy1">Buy Now</string>
    <string name="details">Mobil Super 0W-20 ensures superior wear protection, smoother acceleration, and improved engine efficiency with Heat-Activated Anti-Wear Molecules. 
        •  Suitable for Leading branded vehicles and other newer Japanese ECO gasoline engines
        •  Improved fuel economy by up to 2%
•  Heat-activated anti-wear molecule provides high temperature wear protection while keeping your engine clean
•  Provides better engine wear protection up to 65%</string>
    <string name="reduce">-</string>
    <string name="add">+</string>
    <string name="item">1</string>
    <string name="price">Rs.550.00</string>
    <string name="pay1">ADD TO CART</string>
    <string name="product_title">Thermol Offer 10 package</string>
    <string name="product_sku">SKU: 88746</string>
    <string name="original_price">Rs. 600.00</string>
    <string name="savings_text">You are saving: Rs.50 </string>
    <string name="savings_percentage">8%</string>
    <string name="total_price">TOTAL: Rs. 550</string>
    <string name="was_price">WAS: Rs. 600</string>
    <string name="product_details">Product details</string>
    <string name="mobil_engine_oil">MOBIL ENGINE OIL</string>

</resources>